module/postponed/type_constructor/tests/inc/single/single_redefinition_test.stderr
error[E0428]: the name `Bad` is defined multiple times
  --> tests/dt/type_constructor/single/single_redefinition_test.rs:5:3
   |
5  | /   types!
6  | |   {
7  | |
8  | |     pub single Bad : std::sync::Arc< T >;
9  | |     pub single Bad : std::rc::Rc< T >;
10 | |
11 | |   }
   | |   ^
   | |   |
   | |___`Bad` redefined here
   |     previous definition of the type `Bad` here
   |
   = note: `Bad` must be defined only once in the type namespace of this block
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Deref` for type `main::Bad< _ >`
  --> tests/dt/type_constructor/single/single_redefinition_test.rs:5:3
   |
5  | /   types!
6  | |   {
7  | |
8  | |     pub single Bad : std::sync::Arc< T >;
9  | |     pub single Bad : std::rc::Rc< T >;
10 | |
11 | |   }
   | |   ^
   | |   |
   | |___first implementation here
   |     conflicting implementation for `main::Bad< _ >`
   |
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `DerefMut` for type `main::Bad< _ >`
  --> tests/dt/type_constructor/single/single_redefinition_test.rs:5:3
   |
5  | /   types!
6  | |   {
7  | |
8  | |     pub single Bad : std::sync::Arc< T >;
9  | |     pub single Bad : std::rc::Rc< T >;
10 | |
11 | |   }
   | |   ^
   | |   |
   | |___first implementation here
   |     conflicting implementation for `main::Bad< _ >`
   |
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `From<&_>` for type `main::Bad< _ >`
  --> tests/dt/type_constructor/single/single_redefinition_test.rs:5:3
   |
5  | /   types!
6  | |   {
7  | |
8  | |     pub single Bad : std::sync::Arc< T >;
9  | |     pub single Bad : std::rc::Rc< T >;
10 | |
11 | |   }
   | |   ^
   | |   |
   | |___first implementation here
   |     conflicting implementation for `main::Bad< _ >`
   |
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)
