module/postponed/type_constructor/tests/inc/single/single_redefinition_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!
  {
    
    pub single Bad : std::sync::Arc< T >;
    pub single Bad : std::rc::Rc< T >;

  }
}
